tests/Fase2-Semantic/error/t40-minus_of_no_numerical_type.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = -false;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
